shorten more names, remove extra spaces/newlines in names

--- a/datasets/nasa-airibrad.yaml
+++ b/datasets/nasa-airibrad.yaml
@@ -1,5 +1,4 @@
-Name: AIRS/Aqua L1B Infrared (IR) geolocated and calibrated radiances V005 (AIRIBRAD)
-  at GES DISC
+Name: AIRS/Aqua L1B Infrared (IR) geolocated and calibrated radiances V005 (AIRIBRAD) at GES DISC
 Description: |-
   WARNING: On 2021/09/23 the EOS Aqua executed a Deep Space Maneuver (DSM). In the DSM, the spacecraft is turned such that the normal Earth field of regard is deep space.
 
