--- a/datasets/nasa-gpm3imergdl.yaml
+++ b/datasets/nasa-gpm3imergdl.yaml
@@ -1,5 +1,4 @@
-Name: GPM IMERG Late Precipitation L3 1 day 0.1 degree x 0.1 degree V07 (GPM_3IMERGDL)
-  at GES DISC
+Name: GPM IMERG Late Precipitation L3 1 day 0.1 degree x 0.1 degree V07 (GPM_3IMERGDL) at GES DISC
 Description: "Version 07 is the current version of the data set. Older versions will
   no longer be available and have been superseded by Version 07.\n\nThe Integrated
   Multi-satellitE Retrievals for GPM (IMERG) IMERG is a NASA product estimating global
