--- a/datasets/nasa-gpm3imergm.yaml
+++ b/datasets/nasa-gpm3imergm.yaml
@@ -1,5 +1,4 @@
-Name: GPM IMERG Final Precipitation L3 1 month 0.1 degree x 0.1 degree V07 (GPM_3IMERGM)
-  at GES DISC
+Name: GPM IMERG Final Precipitation L3 1 month 0.1 degree x 0.1 degree V07 (GPM_3IMERGM) at GES DISC
 Description: |-
   Version 07B is the current version of the IMERG data sets. Older versions will no longer be available and have been superseded by Version 07.
 
