--- a/datasets/nasa-gpmimerglandseamask.yaml
+++ b/datasets/nasa-gpmimerglandseamask.yaml
@@ -1,5 +1,4 @@
-Name: Land/Sea static mask relevant to IMERG precipitation 0.1x0.1 degree V2 (GPM_IMERG_LandSeaMask)
-  at GES DISC
+Name: Land/Sea static mask relevant to IMERG precipitation 0.1x0.1 degree V2 (GPM_IMERG_LandSeaMask) at GES DISC
 Description: |-
   Version 2 is the current version of the data set. Older versions will no longer be available and have been superseded by Version 2.
 
