--- a/datasets/nasa-gpmmergir.yaml
+++ b/datasets/nasa-gpmmergir.yaml
@@ -1,5 +1,4 @@
-Name: NCEP/CPC L3 Half Hourly 4km Global (60S - 60N) Merged IR V1 (GPM_MERGIR) at
-  GES DISC
+Name: NCEP/CPC L3 Half Hourly 4km Global (60S - 60N) Merged IR V1 (GPM_MERGIR) at GES DISC
 Description: "These data originate from NOAA/NCEP.\n\nThe NOAA Climate Prediction
   Center/NCEP/NWS is making the data available originally in binary format, in a weekly
   rotating archive. The NASA GES DISC is acquiring the binary files as they become
