--- a/datasets/nasa-hlsl30.yaml
+++ b/datasets/nasa-hlsl30.yaml
@@ -1,5 +1,4 @@
-Name: HLS Landsat Operational Land Imager Surface Reflectance and TOA Brightness Daily
-  Global 30m v2.0
+Name: HLS Landsat Operational Land Imager Surface Reflectance and TOA Brightness Daily Global 30m v2.0
 Description: "The Harmonized Landsat Sentinel-2 (HLS) project provides consistent
   surface reflectance (SR) and top of atmosphere (TOA) brightness data from a virtual
   constellation of satellite sensors. The Operational Land Imager (OLI) is housed
