--- a/datasets/nasa-hlss30.yaml
+++ b/datasets/nasa-hlss30.yaml
@@ -1,5 +1,4 @@
-Name: HLS Sentinel-2 Multi-spectral Instrument Surface Reflectance Daily Global 30m
-  v2.0
+Name: HLS Sentinel-2 Multi-spectral Instrument Surface Reflectance Daily Global 30m v2.0
 Description: "The Harmonized Landsat Sentinel-2 (HLS) project provides consistent
   surface reflectance data from the Operational Land Imager (OLI) aboard the joint
   NASA/USGS Landsat 8 satellite and the Multi-Spectral Instrument (MSI) aboard Europe’s
