--- a/datasets/nasa-m2i3npasm.yaml
+++ b/datasets/nasa-m2i3npasm.yaml
@@ -1,5 +1,4 @@
-Name: 'MERRA-2 inst3_3d_asm_Np: 3d,3-Hourly,Instantaneous,Pressure-Level,Assimilation,Assimilated
-  Meteorological Fields 0.625 x 0.5 degree V5.12.4 (M2I3NPASM) at GES DISC'
+Name: 'MERRA-2 inst3_3d_asm_Np: 3d,3-Hourly,Instantaneous,Pressure-Level,Assimilation,Assimilated Meteorological Fields'
 Description: "M2I3NPASM (or  inst3_3d_asm_Np) is an instantaneous 3-dimensional 3-hourly
   data collection in Modern-Era Retrospective analysis for Research and Applications
   version 2 (MERRA-2).  This collection consists of assimilations of meteorological
