--- a/datasets/nasa-m2i3nvaer.yaml
+++ b/datasets/nasa-m2i3nvaer.yaml
@@ -1,5 +1,4 @@
-Name: 'MERRA-2 inst3_3d_aer_Nv: 3d,3-Hourly,Instantaneous,Model-Level,Assimilation,Aerosol
-  Mixing Ratio 0.625 x 0.5 degree V5.12.4 (M2I3NVAER) at GES DISC'
+Name: 'MERRA-2 inst3_3d_aer_Nv: 3d,3-Hourly,Instantaneous,Model-Level,Assimilation,Aerosol Mixing Ratio 0.625 x 0.5 degree'
 Description: "M2I3NVAER (or  inst3_3d_aer_Nv) is an instantaneous 3-dimensional 3-hourly
   data collection in Modern-Era Retrospective analysis for Research and Applications
   version 2 (MERRA-2).  This collection consists of assimilations of aerosol mixing
