--- a/datasets/nasa-operal2rtc-s1v1.yaml
+++ b/datasets/nasa-operal2rtc-s1v1.yaml
@@ -1,5 +1,4 @@
-Name: OPERA Radiometric Terrain Corrected SAR Backscatter from Sentinel-1 validated
-  product (Version 1)
+Name: OPERA Radiometric Terrain Corrected SAR Backscatter from Sentinel-1 validated product (Version 1)
 Description: "The Observational Products for End-Users from Remote Sensing Analysis
   (OPERA) Radiometric Terrain Corrected (RTC) SAR Backscatter from Sentinel-1 (S1)
   validated product consists of radar backscatter normalized with respect to the topography.
