--- a/datasets/nasa-operal3dist-alert-hls_v1.yaml
+++ b/datasets/nasa-operal3dist-alert-hls_v1.yaml
@@ -1,5 +1,4 @@
-Name: OPERA Land Surface Disturbance Alert from Harmonized Landsat Sentinel-2 product
-  (Version 1)
+Name: OPERA Land Surface Disturbance Alert from Harmonized Landsat Sentinel-2 product (Version 1)
 Description: |-
   The Observational Products for End-Users from Remote Sensing Analysis ([OPERA](https://www.jpl.nasa.gov/go/opera)) Land Surface Disturbance Alert from Harmonized Landsat Sentinel-2 (HLS) product Version 1 maps vegetation disturbance alerts that are derived from data collected by Landsat 8 and Landsat 9 Operational Land Imager (OLI) and Sentinel-2A, Sentinel-2B, and Sentinel-2C Multi-Spectral Instrument (MSI). A vegetation disturbance alert is detected at 30 meter (m) spatial resolution when there is an indicated decrease in vegetation cover within an HLS pixel. The Level-3 data product also provides additional information about more general disturbance trends and auxiliary generic disturbance information as determined from the variations of the reflectance through the HLS scenes. [HLS](https://lpdaac.usgs.gov/product_search/?collections=HLS&status=Operational&view=list) data represent the highest temporal frequency data available at medium spatial resolution. The combined observations will provide greater sensitivity to land changes, whether of large magnitude/short duration or small magnitude/long duration.
 
