--- a/datasets/nasa-operal3dist-alert-hlsprovisionalv0.yaml
+++ b/datasets/nasa-operal3dist-alert-hlsprovisionalv0.yaml
@@ -1,5 +1,4 @@
-Name: OPERA Land Surface Disturbance Alert from Harmonized Landsat Sentinel-2 provisional
-  product (Version 0)
+Name: OPERA Land Surface Disturbance Alert from Harmonized Landsat Sentinel-2 provisional product (Version 0)
 Description: "The OPERA_L3_DIST-ALERT-HLS Version 0 data product was decommissioned
   on April 25, 2025. Users are encouraged to use the [OPERA_L3_DIST-ALERT-HLS V1](https://doi.org/10.5067/SNWG/OPERA_L3_DIST-ALERT-HLS_V1.001)
   data product which was released on March 14, 2024, and has achieved stage 1 validation.\n\nThe
