--- a/datasets/nasa-operal3dswx-hlsv1.yaml
+++ b/datasets/nasa-operal3dswx-hlsv1.yaml
@@ -1,5 +1,4 @@
-Name: OPERA Dynamic Surface Water Extent from Harmonized Landsat Sentinel-2 product
-  (Version 1)
+Name: OPERA Dynamic Surface Water Extent from Harmonized Landsat Sentinel-2 product (Version 1)
 Description: "This dataset contains Level-3 Dynamic OPERA surface water extent product
   version 1.  The data are validated surface water extent observations beginning April
   2023. Known issues and caveats on usage are described under Documentation. The input
