--- a/datasets/nasa-gpm3imerghhl.yaml
+++ b/datasets/nasa-gpm3imerghhl.yaml
@@ -1,5 +1,4 @@
-Name: GPM IMERG Late Precipitation L3 Half Hourly 0.1 degree x 0.1 degree V07 (GPM_3IMERGHHL)
-  at GES DISC
+Name: GPM IMERG Late Precipitation L3 Half Hourly 0.1 degree x 0.1 degree V07 (GPM_3IMERGHHL) at GES DISC
 Description: |- 
   Version 07B is the current version of the IMERG data sets. Older versions
   will no longer be available and have been superseded by Version 07.\n\nThe Integrated
