--- a/datasets/nasa-operal2cslc-s1v1.yaml
+++ b/datasets/nasa-operal2cslc-s1v1.yaml
@@ -1,5 +1,4 @@
-Name: OPERA Coregistered Single-Look Complex from Sentinel-1 validated product (Version
-  1)
+Name: OPERA Coregistered Single-Look Complex from Sentinel-1 validated product (Version 1)
 Description: "The Observational Products for End-Users from Remote Sensing Analysis
   (OPERA) Coregistered Single-Look Complex (CSLC) from Sentinel-1 validated product
   consists of Single Look Complex (SLC) images which contain both amplitude and phase
