--- a/datasets/nasa-operal3dist-ann-hlsv1.yaml
+++ b/datasets/nasa-operal3dist-ann-hlsv1.yaml
@@ -1,5 +1,4 @@
-Name: OPERA Land Surface Disturbance Annual from Harmonized Landsat Sentinel-2 product
-  (Version 1)
+Name: OPERA Land Surface Disturbance Annual from Harmonized Landsat Sentinel-2 product (Version 1)
 Description: "The Observational Products for End-Users from Remote Sensing Analysis
   ([OPERA](https://www.jpl.nasa.gov/go/opera)) Land Surface Disturbance Annual from
   Harmonized Landsat Sentinel-2 (HLS) product Version 1 summarizes the [DIST-ALERT](https://doi.org/10.5067/SNWG/OPERA_L3_DIST-ALERT-HLS_V1.001)
