--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -13,15 +13,11 @@ UpdateFrequency: Ad hoc (new releases aligned with additional cohort availabilit
 
 Tags:
   - medical-imaging
-  - pet
-  - ct
-  - fdg
   - segmentation
   - nifti
-  - oncology
-  - open-data
-  - radiomics
-  - ai-tools
+  - cancer
+  - radiology
+  - life sciences
 
 License: >
   Dataset licensing per originating site:
