--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -31,12 +31,23 @@ Citation: >
   CT-derived segmentations: an ENHANCE.PET initiative. https://doi.org/10.21203/rs.3.rs-7169062/v2
 
 Resources:
-  - Description: ENHANCE.PET 1.6k dataset (hosted under AWS Open Data)
-    ARN: arn:aws:s3:::<aws-open-data-bucket>
-    Region: us-east-1
+  - Description: ENHANCE.PET 1.6k public S3 bucket
+    ARN: arn:aws:s3:::enhance-pet-1-6k
+    Region: us-west-2
     Type: S3 Bucket
-    Explore: s3://<aws-open-data-bucket>/
+    Explore: https://enhance-pet-1-6k.s3.us-west-2.amazonaws.com/
 
+  - Description: ENHANCE.PET 1.6k dataset ZIP (≈250 GB)
+    ARN: arn:aws:s3:::enhance-pet-1-6k/ENHANCE-PET-1_6k.zip
+    Region: us-west-2
+    Type: S3 Object
+    Explore: https://enhance-pet-1-6k.s3.us-west-2.amazonaws.com/ENHANCE-PET-1_6k.zip
+
+  - Description: SNS topic for ENHANCE.PET 1.6k S3 object creation events
+    ARN: arn:aws:sns:us-west-2:602670427264:enhance-pet-1-6k-object_created
+    Region: us-west-2
+    Type: SNS Topic
+    
 DataAtWork:
   Tutorials:
     - Title: Dataset Organization & AWS Access (MOOSE CLI)
