removed duplicate NASA dataset

--- a/datasets/nasa-operal3dist-alert-hlsv1.yaml
+++ b/datasets/nasa-operal3dist-alert-hlsv1.yaml
@@ -10,7 +10,7 @@ Description: |-
   * Additional usage constraints are provided under Section 5 of the Algorithm Theoretical Basis Document (ATBD).
   Read our doc on how to get AWS Credentials to retrieve this data: https://data.lpdaac.earthdatacloud.nasa.gov/s3credentialsREADME
 Documentation: https://doi.org/10.5067/SNWG/OPERA_L3_DIST-ALERT-HLS_V1.001
-Contact: 'User Services: lpdaac@usgs.gov'
+Contact: 'Email: lpdaac@usgs.gov. Home Page: https://lpdaac.usgs.gov/'
 ManagedBy: NASA
 UpdateFrequency: From 2022-01-01 to Ongoing (Daily - < Weekly)
 Tags:
