--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -12,7 +12,7 @@ ManagedBy: ENHANCE.PET initiative (LMU Klinikum & partners)
 UpdateFrequency: Ad hoc (new releases aligned with additional cohort availability)
 
 Tags:
-  - medical-imaging
+  - medical imaging
   - segmentation
   - nifti
   - cancer
