--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -1,4 +1,4 @@
-Name: ENHANCE.PET 1.6k: Whole-/Total-Body [18F]FDG-PET/CT with CT-Derived Segmentations
+Name: ENHANCE.PET 1.6k - Whole-/Total-Body [18F]FDG-PET/CT with CT-Derived Segmentations
 Description: >
   Open, multi-center dataset of 1,597 whole-/total-body FDG-PET/CT studies with
   130 CT-derived, expert-verified anatomical segmentations per scan (~250 GB).
@@ -28,7 +28,7 @@ License: >
 
 Citation: >
   Ferrara D. et al. (2025). Sharing a whole-/total-body [18F]FDG-PET/CT dataset with
-  CT-derived segmentations: an ENHANCE.PET initiative. https://doi.org/10.21203/rs.3.rs-7169062/v2
+  CT-derived segmentations - an ENHANCE.PET initiative. https://doi.org/10.21203/rs.3.rs-7169062/v2
 
 Resources:
   - Description: ENHANCE.PET 1.6k public S3 bucket
@@ -63,7 +63,7 @@ DataAtWork:
       AuthorURL: https://enhance.pet/
 
   Publications:
-    - Title: Sharing a whole-/total-body [18F]FDG-PET/CT dataset with CT-derived segmentations: an ENHANCE.PET initiative
+    - Title: Sharing a whole-/total-body [18F]FDG-PET/CT dataset with CT-derived segmentations - an ENHANCE.PET initiative
       URL: https://doi.org/10.21203/rs.3.rs-7169062/v2
       AuthorName: Ferrara, D.; Pires, M.; Gutschmayer, S.; Yu, J.; Abdelhafez, Y. G.; Abenavoli, E.; Badawi, R. D.;
         Chaudhari, A. J.; Chen, M. S.; Cherry, S. R.; Frille, A.; Geist, B. K.; Grüenert, S.; Hacker, M.;
