--- a/datasets/noaa-nws-hafs.yaml
+++ b/datasets/noaa-nws-hafs.yaml
@@ -15,7 +15,7 @@ Contact: |
   For any questions regarding data delivery or any general questions regarding the NOAA Open Data Dissemination (NODD) Program, email the NODD Team at nodd@noaa.gov.
   <br /> We also seek to identify case studies on how NOAA data is being used and will be featuring those stories in joint publications and in upcoming events. If you are interested in seeing your story highlighted, please share it with the NODD team by emailing nodd@noaa.gov
 ManagedBy: "[NOAA](http://www.noaa.gov/)"
-UpdateFrequency: Event Driven
+UpdateFrequency: Event Driven.<br/> <br/>As of August 2025, a few forecast cycles for Hurricane Fiona (07L) and Hurricane Nicole (17L) from the 2022 Atlantic hurricane season have been made available. These files can be found under the subdirectories of hfsa_retro and hfsb_retro. Additional forecast files from the 2022 hurricane season can be made available upon user request.
 Collabs:
   ASDI:
     Tags:
