--- a/datasets/dendritic-consortium.yaml
+++ b/datasets/dendritic-consortium.yaml
@@ -30,5 +30,11 @@ DataAtWork:
       URL: https://github.com/jpcastanoo/aws-open-data-dendritic-consortium/tree/main/tutorials
       AuthorName: Dendritic Consortium
       AuthorURL: https://github.com/jpcastanoo/aws-open-data-dendritic-consortium
+  Tools & Applications:
+    - Title: Dendritic Consortium Database
+      URL: https://dendritic-consortium.vercel.app/database
+      AuthorName: Dendritic Consortium
+      AuthorURL: https://dendritic-consortium.vercel.app
 ADXCategories:
   - Healthcare & Life Sciences Data
+
