--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -48,7 +48,7 @@ DataAtWork:
       URL: https://github.com/ENHANCE-PET/MOOSE/blob/main/DATA_CARD.md
       AuthorName: ENHANCE.PET Team
       AuthorURL: https://enhance.pet/
-      Services: [ S3 ]
+      Services: [ s3 ]
 
   Tools & Applications:
     - Title: MOOSE (Multi-organ objective segmentation tool)
