--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -65,7 +65,5 @@ DataAtWork:
         Beyer, T.; Sundar, L. K. S.
       AuthorURL: https://orcid.org/0000-0002-8711-8081
 
-DeprecatedNotice: ""
 ADXCategories:
-  - life-sciences
-  - machine-learning
+  - Healthcare & Life Sciences Data
