--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -5,8 +5,7 @@ Description: >
   Provided as anonymized NIfTI (PET, CT, labels) with spreadsheet metadata.
   Designed for segmentation benchmarking, multi-organ analysis, radiomics, and PET/CT AI research.
 
-Documentation:
-  - https://github.com/ENHANCE-PET/MOOSE/blob/main/DATA_CARD.md
+Documentation: https://github.com/ENHANCE-PET/MOOSE/blob/main/DATA_CARD.md
 Contact: Lalith.shiyam@med.uni-muenchen.de
 ManagedBy: ENHANCE.PET initiative (LMU Klinikum & partners)
 UpdateFrequency: Ad hoc (new releases aligned with additional cohort availability)
@@ -35,7 +34,8 @@ Resources:
     ARN: arn:aws:s3:::enhance-pet-1-6k
     Region: us-west-2
     Type: S3 Bucket
-    Explore: https://enhance-pet-1-6k.s3.us-west-2.amazonaws.com/
+    Explore: 
+    - https://enhance-pet-1-6k.s3.us-west-2.amazonaws.com/
 
   - Description: SNS topic for ENHANCE.PET 1.6k S3 object creation events
     ARN: arn:aws:sns:us-west-2:602670427264:enhance-pet-1-6k-object_created
