--- a/datasets/enhance-pet-1-6k.yaml
+++ b/datasets/enhance-pet-1-6k.yaml
@@ -35,7 +35,7 @@ Resources:
     Region: us-west-2
     Type: S3 Bucket
     Explore: 
-    - https://enhance-pet-1-6k.s3.us-west-2.amazonaws.com/
+    - '[Browse Bucket](https://enhance-pet-1-6k.s3.us-west-2.amazonaws.com/)'
 
   - Description: SNS topic for ENHANCE.PET 1.6k S3 object creation events
     ARN: arn:aws:sns:us-west-2:602670427264:enhance-pet-1-6k-object_created
