--- a/datasets/busco-data.yaml
+++ b/datasets/busco-data.yaml
@@ -18,11 +18,10 @@ License: The BUSCO datasets are licensed under the Creative Commons Attribution-
 Any use of these datasets for analyses in a publication or product must include the citation of the corresponding paper: https://doi.org/10.1093/molbev/msab199
 Citation:
 Resources:
-  - Description:
-    ARN:
-    Region:
-    Type:
-    Explore:
+  - Description: BUSCO datasets and companion files for use with BUSCO pipeline
+    ARN: arn:aws:s3:::busco-data
+    Region: us-east-1
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: BUSCO - from QC to gene prediction and phylogenomics
