Update eai-essential-web-v1.yaml to include ARN and Region for S3 bucket

--- a/datasets/eai-essential-web-v1.yaml
+++ b/datasets/eai-essential-web-v1.yaml
@@ -13,8 +13,8 @@ Tags:
 License: 'Essential-Web-v1.0 contributions are made available under the [ODC attribution license](https://opendatacommons.org/licenses/by/odc_by_1.0_public_text.txt); however, users should also abide by the [Common Crawl - Terms of Use](https://commoncrawl.org/terms-of-use). We do not alter the license of any of the underlying data.'
 Resources:
   - Description: 'Essential-Web v1.0: 24T tokens of organized web data'
-    ARN: # TODO: fill in 
-    Region: # TODO: fill in
+    ARN: arn:aws:s3:::essential-web-v1.0
+    Region: us-west-2
     Type: S3 Bucket
     Explore:
       - https://huggingface.co/datasets/EssentialAI/essential-web-v1.0
