--- a/datasets/canelevation-dem.yaml
+++ b/datasets/canelevation-dem.yaml
@@ -81,9 +81,10 @@ DataAtWork:
       URL: https://nrcan.github.io/cloud-optimized-geospatial/
       AuthorName: NRCan
   Publications:
-    - Title: Descriptor: Medium Resolution Digital Elevation Model From Natural Resources Canada’s CanElevation Series (MRDEM-30)
+    - Title: "Descriptor: Medium Resolution Digital Elevation Model From Natural Resources Canada’s CanElevation Series (MRDEM-30)"
       URL: https://doi.org/10.1109/IEEEDATA.2025.3576318
       AuthorName: H. McGrath et al.
+
 
 
 
