--- a/datasets/busco-data.yaml
+++ b/datasets/busco-data.yaml
@@ -14,6 +14,7 @@ Tags:
   - open source software
   - protein
   - virus
+  - aws-pds
 License: The BUSCO datasets are licensed under the Creative Commons Attribution-NoDerivatives 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by-nd/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
 Any use of these datasets for analyses in a publication or product must include the citation of the corresponding paper: https://doi.org/10.1093/molbev/msab199
 Citation:
