--- a/datasets/dendritic-consortium.yaml
+++ b/datasets/dendritic-consortium.yaml
@@ -18,6 +18,7 @@ Tags:
   - neurophysiology
   - simulation neuroscience
   - single neuron models
+  - aws-pds
 License: There are no restrictions on the use of this data.
 Resources:
   - Description: "Multimodal dataset from Baz1a pyramidal neurons in mouse V1, including TIFF, ABF, MAT, CSV, PNG, PY, HOC, and SWC files."
@@ -41,3 +42,4 @@ DataAtWork:
       AuthorURL: https://dendritic-consortium.vercel.app
 ADXCategories:
   - Healthcare & Life Sciences Data
+
