--- a/datasets/busco-data.yaml
+++ b/datasets/busco-data.yaml
@@ -32,13 +32,8 @@ DataAtWork:
     - Title: BUSCO - from QC to gene prediction and phylogenomics
       URL: https://www.youtube.com/watch?v=9SjVY3BT8JU
       AuthorName: Matthew Berkeley
-      AuthorURL:
+      AuthorURL: https://github.com/berkelem
       Services:
-  Tools & Applications:
-    - Title:
-      URL:
-      AuthorName:
-      AuthorURL:
   Publications:
     - Title: OrthoDB and BUSCO update - annotation of orthologs with wider sampling of genomes
       URL: https://academic.oup.com/nar/article/53/D1/D516/7899526?login=true
