--- a/datasets/busco-data.yaml
+++ b/datasets/busco-data.yaml
@@ -34,13 +34,13 @@ DataAtWork:
       AuthorURL: https://github.com/berkelem
       Services:
   Publications:
-    - Title: OrthoDB and BUSCO update - annotation of orthologs with wider sampling of genomes
+    - Title: OrthoDB and BUSCO update - annotation of orthologs with wider sampling of genomes.
       URL: https://academic.oup.com/nar/article/53/D1/D516/7899526?login=true
       AuthorName: Fredrik Tegenfeldt, Dmitry Kuznetsov, Mosè Manni, Matthew Berkeley, Evgeny M Zdobnov, Evgenia V Kriventseva
-    - Title: BUSCO Update - Novel and Streamlined Workflows along with Broader and Deeper Phylogenetic Coverage for Scoring of Eukaryotic, Prokaryotic, and Viral Genomes
+    - Title: BUSCO Update - Novel and Streamlined Workflows along with Broader and Deeper Phylogenetic Coverage for Scoring of Eukaryotic, Prokaryotic, and Viral Genomes.
       URL: https://academic.oup.com/mbe/article/38/10/4647/6329644?login=true
       AuthorName: Mosè Manni, Matthew R Berkeley, Mathieu Seppey, Felipe A Simão, Evgeny M Zdobnov
-    - Title: BUSCO - assessing genomic data quality and beyond
+    - Title: BUSCO - assessing genomic data quality and beyond.
       URL: https://currentprotocols.onlinelibrary.wiley.com/doi/full/10.1002/cpz1.323
       AuthorName: Mosè Manni, Matthew R. Berkeley, Mathieu Seppey, Evgeny M. Zdobnov
 DeprecatedNotice:
