--- a/datasets/cmas-data-warehouse.yaml
+++ b/datasets/cmas-data-warehouse.yaml
@@ -60,6 +60,12 @@ Resources:
     Type: S3 Bucket
     Explore: 
     - '[Browse Bucket](https://cmas-equates.s3.amazonaws.com/index.html)'
+  - Description: CMAQ 2023 12US4 CRACMM3 Modeling Platform
+    ARN: arn:aws:s3::::::cmaq-12us4-cracmm3-modeling-platform-2023
+    Region: us-east-1
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Bucket](https://cmaq-12us4-cracmm3-modeling-platform-2023.s3.amazonaws.com/index.html)'
   - Description: EPA 2022 Modeling Platform
     ARN: arn:aws:s3:::epa-2022-modeling-platform
     Region: us-east-1
