--- a/datasets/nrel-pds-sup3rcc.yaml
+++ b/datasets/nrel-pds-sup3rcc.yaml
@@ -38,18 +38,90 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc)'
-  - Description: 'Sup3rCC - CONUS - MRI ESM 2.0 - SSP585 - r1i1p1f1'
-    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_mriesm20_ssp585_r1i1p1f1/
-    Region: us-west-2
-    Type: S3 Bucket
-    Explore:
-    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_mriesm20_ssp585_r1i1p1f1%2F)'
   - Description: 'Sup3rCC Generative Models'
     ARN: arn:aws:s3:::nrel-pds-sup3rcc/models/
     Region: us-west-2
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=models%2F)'
+  - Description: 'Sup3rCC - CONUS - EC-Earth3 - SSP585 - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_ecearth3_ssp585_r1i1p1f1%2F/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_ecearth3_ssp585_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - EC-Earth3-CC - Historical - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_ecearth3cc_historical_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_ecearth3cc_historical_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - EC-Earth3-CC - SSP245 - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_ecearth3cc_ssp245_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_ecearth3cc_ssp245_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - EC-Earth3-Veg - Historical - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_ecearth3veg_historical_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_ecearth3veg_historical_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - EC-Earth3-Veg - SSP245 - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_ecearth3veg_ssp245_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_ecearth3veg_ssp245_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - GFDL-CM4 - Historical - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_gfdlcm4_historical_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_gfdlcm4_historical_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - GFDL-CM4 - SSP245 - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_gfdlcm4_ssp245_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_gfdlcm4_ssp245_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - MPI-ESM1.2-HR - Historical - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_mpiesm12hr_historical_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_mpiesm12hr_historical_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - MPI-ESM1.2-HR - SSP245 - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_mpiesm12hr_ssp245_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_mpiesm12hr_ssp245_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - MRI-ESM2.0 - Historical - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_mriesm20_historical_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_mriesm20_historical_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - MRI-ESM2.0 - SSP585 - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_mriesm20_ssp585_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_mriesm20_ssp585_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - TaiESM1 - Historical - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_taiesm1_historical_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_taiesm1_historical_r1i1p1f1%2F)'
+  - Description: 'Sup3rCC - CONUS - TaiESM1 - SSP245 - r1i1p1f1'
+    ARN: arn:aws:s3:::nrel-pds-sup3rcc/conus_taiesm1_ssp245_r1i1p1f1/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-sup3rcc&prefix=conus_taiesm1_ssp245_r1i1p1f1%2F)'
 DataAtWork:
   Tutorials:
     - Title: Using the Sup3rCC Data
