--- a/datasets/kyfromabove.yaml
+++ b/datasets/kyfromabove.yaml
@@ -23,7 +23,6 @@ Resources:
     Explore:
     - '[KyFromAbove Stac-Browser](https://kygeonet.ky.gov/stac)'
     - '[STAC V1.0.0 endpoint](https://spved5ihrl.execute-api.us-west-2.amazonaws.com/)'
-    - 'KyFromAbove Explorer'
     - '[Browse Bucket](https://kyfromabove.s3.us-west-2.amazonaws.com/index.html)'
   - Description: KyFromAbove Topographic Contours, digital elevation models, point cloud, spot elevations and the KyTopo Map Series quadrangles can be found in this bucket.
     ARN: arn:aws:s3:::kyfromabove/elevation/
@@ -113,7 +112,7 @@ DataAtWork:
       Services:
         - Amazon S3
   Tools & Applications:
-      - Title: Kentucky From Above SpatioTemporal Asset catalog
+      - Title: Kentucky From Above SpatioTemporal Asset Catalog
         URL: https://kygeonet.ky.gov/stac
         AuthorName: Ian Horn, Ky Div. of Geographic Information
       - Title: KyFromAbove Explorer
