add AuthorURL to tool

--- a/datasets/kyfromabove.yaml
+++ b/datasets/kyfromabove.yaml
@@ -109,6 +109,7 @@ DataAtWork:
       URL: https://github.com/ianhorn/kyfromabove-on-aws-examples/blob/main/examples/clip_tiles_to_boundary.ipynb
       NotebookURL: https://github.com/ianhorn/kyfromabove-on-aws-examples/blob/main/examples/clip_tiles_to_boundary.ipynb
       AuthorName: Ian Horn
+      AuthorURL: https://www.linkedin.com/in/ian-horn-503b1022/
       Services:
         - Amazon S3
   Tools & Applications:
