Add new resource

--- a/datasets/biolip.yaml
+++ b/datasets/biolip.yaml
@@ -20,6 +20,10 @@ Resources:
     ARN: arn:aws:s3:::biolip
     Region: ap-southeast-1
     Type: S3 Bucket
+  - Description: BioLiP interaction structures
+    ARN: arn:aws:s3:::biolip/weekly
+    Region: ap-southeast-1
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: BioLiP API usage
