--- a/datasets/xreverselabs-domain-dataset.yaml
+++ b/datasets/xreverselabs-domain-dataset.yaml
@@ -5,7 +5,7 @@ Description: >
   data, domain lists grouped by TLD/extension, and a Forward DNS (FDNS) dataset
   containing resolved domain-to-IP mappings with metadata. The dataset is designed
   to support cybersecurity, threat intelligence, and internet-scale research.
-Documentation: https://opendata.xreverselabs.org/docs/
+Documentation: https://opendata.xreverselabs.org/about.php
 Contact: opendata@xreverselabs.org
 ManagedBy: xReverseLabs
 UpdateFrequency: Daily
@@ -39,7 +39,7 @@ DataAtWork:
     - Title: Get To Know A Dataset: xReverseLabs Domain Dataset
       URL: https://github.com/xreverselabs/open-data-examples/blob/main/xreverselabs/get-to-know-a-dataset.ipynb
       AuthorName: xReverseLabs
-      AuthorURL: https://xreverselabs.org
+      AuthorURL: https://opendata.xreverselabs.org
   Publications: []
   Tools & Applications: []
 Citation: >
