add back accidently deleted section

--- a/datasets/kyfromabove.yaml
+++ b/datasets/kyfromabove.yaml
@@ -4,6 +4,10 @@ Documentation: https://github.com/awslabs/open-data-docs/tree/main/docs/kyfromab
 Contact: More information regarding the KyFromAbove program can be found at https://kyfromabove.ky.gov. If you have specific questions please contact - kyfromabove@ky.gov.
 ManagedBy: "[Kentucky Division of Geographic Information](https://kygeonet.ky.gov)"
 UpdateFrequency: KyFromAbove data are typically updated on an annual basis. Each year, a portion of the state is acquired with an overall update cycle of every three to four years. This update cadance is determined by both funding and the length of leaf-off conditions in a given year. This catalog currently includes imagery and LiDAR data from 2010 through 2024 for most products.
+Collabs:
+  ASDI:
+    Tags:
+      - elevation
 Tags:
   - aws-pds
   - earth observation
