added GFS notebook

--- a/datasets/noaa-gfs-bdp-pds.yaml
+++ b/datasets/noaa-gfs-bdp-pds.yaml
@@ -74,6 +74,9 @@ Resources:
     Type: SNS Topic
 DataAtWork:
   Tutorials:
+    - Title: "NOAA Global Forecast System (GFS) quickstart notebook on AWS"
+      URL: https://github.com/aws-samples/aws-opendata-samples/blob/main/notebooks/noaa-gfs/noaa_gfs_quickstart.ipynb
+      AuthorName: Benoit de Chateauvieux
   Tools & Applications:
   Publications:
     - Title: GFS Warm Restart Files Additional Information
