update tags to include existing tags only

--- a/datasets/kyfromabove.yaml
+++ b/datasets/kyfromabove.yaml
@@ -9,13 +9,17 @@ Collabs:
     Tags:
       - elevation
 Tags:
-  - aws-pds
-  - earth observation
   - aerial imagery
+  - cog
+  - dtm
+  - elevation
+  - geopackage
   - geospatial
   - lidar
-  - elevation
-  - emergency response
+  - mapping
+  - stac
+  - tiff
+  - tiles
 License: |
   Public Domain with Attribution
 Resources:
