--- a/datasets/kyfromabove.yaml
+++ b/datasets/kyfromabove.yaml
@@ -10,8 +10,10 @@ Collabs:
       - elevation
 Tags:
   - aerial imagery
+  - aws-pds
   - cog
   - dtm
+  - earth observation
   - elevation
   - geopackage
   - geospatial
